Fixed another input text was invisible

--- a/src/my-react-frontend/src/components/Style/HomePage.css
+++ b/src/my-react-frontend/src/components/Style/HomePage.css
@@ -30,7 +30,6 @@
 .wrapper {
     background: transparent;
     border: 2px solid rgba(255, 255, 255, .2);
-    color: #fff;
     border-radius: 10px;
     padding: 30px 40px;
     backdrop-filter: blur(30px);
